--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   google_sign_in: ^5.0.7
   flutter_svg: ^0.22.0
+  provider: ^6.0.0
+  firebase_storage: ^10.0.2
+  firebase_database: ^7.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
