--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,6 @@ dependencies:
   lottie: ^1.1.0
   firebase_core: ^1.4.0
   firebase_auth: ^3.0.2
-  flutter_facebook_login: ^3.0.0
   google_sign_in: ^5.0.7
   flutter_svg: ^0.22.0
   provider: ^6.0.0
@@ -64,6 +63,20 @@ flutter:
     - Assets/Images/padlock.svg
     - Assets/Images/planet-earth.svg
     - Assets/Images/googleIcon.png
+    - Assets/Images/fondo_drawer.png
+    - Assets/Images/ic_reciclar.svg
+    - Assets/Images/recycled.svg
+    - Assets/Images/pregunta.svg
+    - Assets/Images/recycling-bin.svg
+    - Assets/Images/recycling-center.svg
+    - Assets/Images/teamwork.svg
+    - Assets/Images/call.svg
+    - Assets/Images/settings.svg
+    - Assets/Images/logout.svg
+    - Assets/Images/categoria.png
+    - Assets/Images/tag.svg
+    - Assets/Images/beneficio.png
+    - Assets/Images/robot_usuario.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
