--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,7 @@ flutter:
     - Assets/Images/Ventilador.png
     - Assets/Images/Caja.png
     - Assets/Images/caja2.png
+    - Assets/Images/CAJAVACIA.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
